--- a/frontend.html
+++ b/frontend.html
@@ -14,7 +14,7 @@
             height: 100vh;
         }
         header { 
-            background-color: #4CAF50; /* 이 색깔 다 바꾸면 돼용 */
+            background-color: #CE063F;
             color: white;
             padding: 10px 20px;
             display: flex;
@@ -23,20 +23,6 @@
         }
         header h1 {
             margin: 0;
-        }
-        header .login-button {
-            background-color: white;
-            color: #4CAF50;
-            border: 2px solid ;
-            padding: 5px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.3s, color 0.3s;
-        }
-        header .login-button:hover {
-            background-color: #4CAF50;
-            color: white;
         }
         .chatbot-container {
             flex: 1;
@@ -67,11 +53,11 @@
             max-width: 70%;
         }
         .user-message {
-            background-color: #d8f5d0; /*사용자 input 색상입니다! 얘도 바꾸면 됩니당*/
+            background-color: #d8f5d0;
             align-self: flex-end;
         }
         .chatbot-message {
-            background-color: #fff3e0; /* chatbot 답변 색상 */
+            background-color: #fff3e0;
             align-self: flex-start;
         }
         .message-input {
@@ -88,7 +74,7 @@
             border-radius: 5px;
         }
         .message-input button {
-            background-color: #4CAF50;
+            background-color: #CE063F;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -146,7 +132,7 @@
 
             // Scroll to the bottom of the chat window
             chatWindow.scrollTop = chatWindow.scrollHeight;
-
+            
             // Clear the input field
             inputField.value = '';
         }
